--- a/src/main.css
+++ b/src/main.css
@@ -24,6 +24,10 @@
   }
 }
 
+@theme {
+  --breakpoint-intro: 64rem;
+}
+
 * {
   font-family: "Nunito", sans-serif;
 }
@@ -35,5 +39,46 @@ body {
 #devices {
   @media (max-height: 900px) and (min-width: 1024px) {
     bottom: -20rem;
+  }
+}
+
+.hdd-light {
+  animation: hdd-blink 2.5s infinite;
+  background: #000;
+}
+
+.emphasize-text {
+  color: #00d5ff; /* Aqua-like glow color */
+  text-shadow: 0 0 6px rgba(0, 255, 204, 0.6);
+  font-weight: 600;
+}
+
+.desk {
+  max-width: 1800px;
+  width: 90%;
+}
+
+@media (max-width: 1202px) {
+  .desk {
+    display: none;
+  }
+}
+
+@keyframes hdd-blink {
+  0%,
+  10%,
+  25%,
+  50%,
+  65%,
+  100% {
+    background-color: #000;
+    box-shadow: none;
+  }
+
+  5%,
+  20%,
+  60% {
+    background-color: #31c48d; /* ON state */
+    box-shadow: 0 0 5px #31c48d;
   }
 }
